tests/trybuild/entity/type_comma_alone.rs
use brood::Entity;

type Entity = Entity!(,);

fn main() {}
